--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
     
         <header>
-            <span id="lh">
+            <span id="">
                 <img src="https://www.snowflakedesigns.com/skin/frontend/default/snowflakenew/images/logo.png">
             
             </span>
