--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <br>
                     <li>Shopping -$0.00</li>
                     <li><img src="http://i.imgur.com/5Kr8df0.png" alt="Login with Facebook"/></li>
-                    <li><img src="http://i.imgur.com/3mit4GQ.png" alt="Login with Amazon"></li>
+                    <li><img src="http://i.imgur.com/3mit4GQ.png" alt="Login with Amazon"/></li>
                     <li>1-888-509-6234</li>
                     
             
