--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <img src=http://i.imgur.com/qMvCOlM.png>
             </span>
             
-            <nav id="one_nav">
-                <ul class="one_li">
+            <div id="one_nav">
+                <ul class="firstul">
                     <li><a href="#">Search Store></a></li>
                     <li><a href="#">US Dollar-USD </a></li>
                     <li><a href="#">My Account</a></li>
@@ -28,7 +28,7 @@
                     <li>1-888-509-6234</li>
                     
                 </ul>
-            </nav>
+            </div>
         </header>
         <main>
             <nav>
