--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src=http://i.imgur.com/qMvCOlM.png>
             </span>
             
-            <div id="one_nav">
+            <nav id="one_nav">
                 <ul class="firstul">
                     <li><a href="#">Search Store></a></li>
                     <li><a href="#">US Dollar-USD </a></li>
@@ -28,7 +28,7 @@
                     <li>1-888-509-6234</li>
                     
                 </ul>
-            </div>
+            </nav>
         </header>
         <main>
             <nav>
