nav section nesting debug
class tag is used for more than one.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         </header>
         <main>
             <nav>
-                <ul id="two_nav">
-                    <li class="two_li">Home</li>
-                    <li class="two_li">What's New</li>
-                    <li class="two_li">Women &amp; Girls</li>
-                    <li class="two_li">Clothing</li>
-                    <li class="two_li">Accessories</li>
-                    <li class="two_li">Men &amp; Boys</li>
-                    <li class="two_li">Help</li>
-                    <li class="two_li">Sales</li>
-                    <li class="two_li">Snowflake Style</li>
+                <ul class="two_li">
+                    <li>Home</li>
+                    <li>What's New</li>
+                    <li>Women &amp; Girls</li>
+                    <li>Clothing</li>
+                    <li>Accessories</li>
+                    <li>Men &amp; Boys</li>
+                    <li>Help</li>
+                    <li>Sales</li>
+                    <li>Snowflake Style</li>
                     
                     <li><img src="http://i.imgur.com/ZQiXs0i.png"></li>
                     <li><img src="http://i.imgur.com/RhYRUAR.png"></li>
