--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <main>
             <nav>
                 <ul class="two_li">
-                    <li>Home</li>
-                    <li>What's New</li>
-                    <li>Women &amp; Girls</li>
-                    <li>Clothing</li>
-                    <li>Accessories</li>
-                    <li>Men &amp; Boys</li>
-                    <li>Help</li>
-                    <li>Sales</li>
-                    <li>Snowflake Style</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">What's New</a></li>
+                    <li><a href="">Women &amp; Girls</a></li>
+                    <li><a href="">Clothing</a></li>
+                    <li><a href="">Accessories</a></li>
+                    <li><a href="">Men &amp; Boys</a></li>
+                    <li><a href="">Help</a></li>
+                    <li><a href=""Sales></a></li>
+                    <li><a href=""Snowflake Style></a></li>
                     
                     <li><img src="http://i.imgur.com/ZQiXs0i.png"></li>
                     <li><img src="http://i.imgur.com/RhYRUAR.png"></li>
