--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
     
         <header>
-            <span id="header_left">
+            <span id="logo">
                 <img src=http://i.imgur.com/qMvCOlM.png>
             </span>
             
