--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                     <li><a href="">Accessories</a></li>
                     <li><a href="">Men &amp; Boys</a></li>
                     <li><a href="">Help</a></li>
-                    <li><a href=""Sales></a></li>
-                    <li><a href=""Snowflake Style></a></li>
-                    
+                    <li><a href="">Sales></a></li>
+                    <li><a href="">Snowflake Style></a></li>  
                     <li><img src="http://i.imgur.com/ZQiXs0i.png"></li>
                     <li><img src="http://i.imgur.com/RhYRUAR.png"></li>
                     <li><img src="http://i.imgur.com/3rfbHU6.png"></li>
